<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">OTTLogin</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="bn0">getLoginStatus</string>
    <string name="bn1">deviceLogin</string>
    <string name="bn2">sdkExit</string>
    <string name="bn3">getDeviceID</string>
    <string name="bn4">getPlatformID</string>
    <string name="bn5">getUserID</string>
    <string name="bn6">auto off</string>
    <string name="init">sdkInit</string>
    <string name="title_activity_se">SeActivity</string>

</resources>
